# OpenNJet

./: .gitignore  .gitlab-ci.yml  CHANGES  CHANGES.ru  Dockerfile  Dockerfile.ubuntu  LICENSE  Makefile  NOTICE  README.md  build_cc.sh  build_k8s.sh  build_lua.sh  build_njet.sh  build_openeuler.sh  configure  modules_dynamic  modules_static  njet_sidecar.conf  功能特性.md
auto/lib/mariadb/: .travis.yml  CMakeLists.txt  README  appveyor-download.bat  appveyor.yml  conf  make  travis.sh
auto/lib/mariadb/benchmark/: README.md  build.sh  installation.sh  launch.sh  main-benchmark.cc
auto/lib/mariadb/client/: CMakeLists.txt  ma_plugin_info.c
auto/lib/mariadb/cmake/: CheckFunctions.cmake  CheckIncludeFiles.cmake  CheckTypes.cmake  ConnectorName.cmake  FindGSSAPI.cmake  FindHogweed.cmake  FindIconv.cmake  FindNettle.cmake  FindZStd.cmake  SearchLibrary.cmake  WindowsCache.cmake  check_include_files.cmake  check_types.cmake  export.cmake  install.cmake  install_plugins.cmake  plugins.cmake  sign.cmake  symlink.cmake  version_info.cmake
auto/lib/mariadb/include/: CMakeLists.txt  ma_common.h  ma_compress.h  ma_config.h.in  ma_context.h  ma_crypt.h  ma_global.h  ma_hash.h  ma_priv.h  ma_sys.h  ma_tls.h  mariadb_com.h  mysql.h
auto/lib/mariadb/libmariadb/: CMakeLists.txt  get_password.c  ma_alloc.c  ma_array.c  ma_boost_context.cc  ma_charset.c  ma_client_plugin.c.in  ma_compress.c  ma_context.c  ma_decimal.c  ma_default.c  ma_dtoa.c  ma_errmsg.c  ma_hashtbl.c  ma_init.c  ma_io.c  ma_list.c  ma_ll2str.c  ma_loaddata.c  ma_net.c  ma_password.c  ma_pvio.c  ma_stmt_codec.c  ma_string.c  ma_time.c  ma_tls.c  mariadb_async.c  mariadb_charset.c  mariadb_dyncol.c  mariadb_lib.c  mariadb_rpl.c  mariadb_stmt.c  win32_errmsg.c  win32_errmsg.h
auto/lib/mariadb/man/: CMakeLists.txt  mariadb_cancel.3  mariadb_connection.3  mariadb_dyncol_check.3  mariadb_dyncol_column_cmp_named.3  mariadb_dyncol_column_count.3  mariadb_dyncol_create_many_named.3  mariadb_dyncol_create_many_num.3  mariadb_dyncol_exists_named.3  mariadb_dyncol_exists_num.3  mariadb_dyncol_free.3  mariadb_dyncol_get_named.3  mariadb_dyncol_get_num.3  mariadb_dyncol_has_names.3  mariadb_dyncol_json.3  mariadb_dyncol_list_named.3  mariadb_dyncol_list_num.3  mariadb_dyncol_unpack.3  mariadb_dyncol_update_many_named.3  mariadb_dyncol_update_many_num.3  mariadb_field_attr.3  mariadb_free_rpl_event.3  mariadb_get_infov.3  mariadb_reconnect.3  mariadb_rpl_close.3  mariadb_rpl_fetch.3  mariadb_rpl_get_optionsv.3  mariadb_rpl_open.3  mariadb_rpl_optionsv.3  mariadb_stmt_execute_direct.3  mariadb_stmt_fetch_fields.3  mysql_affected_rows.3  mysql_autocommit.3  mysql_change_user.3  mysql_close.3  mysql_commit.3  mysql_data_seek.3  mysql_eof.3  mysql_errno.3  mysql_error.3  (+89 more)
auto/lib/mariadb/mariadb_config/: CMakeLists.txt  libmariadb.pc.in  mariadb_config.c.in
auto/lib/mariadb/plugins/: CMakeLists.txt
auto/lib/mariadb/scripts/: create_man
auto/lib/mariadb/win/: resource.rc.in
auto/lib/mariadb/win-iconv/: iconv.h  win_iconv.c
auto/lib/njetmq/: CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  LICENSE.txt  Makefile  README-letsencrypt.md  README.md  conf  config.h  config.mk  libmosquitto.pc.in  libmosquittopp.pc.in  make  mosquitto.conf
auto/lib/njetmq/cmake/: FindcJSON.cmake
auto/lib/njetmq/include/: luaconf.h  mosquitto.h  mosquitto_broker.h  mosquitto_plugin.h
auto/lib/njetmq/installer/: mosquitto64.nsi
auto/lib/njetmq/lib/: CMakeLists.txt  actions.c  alias_mosq.c  alias_mosq.h  callbacks.c  connect.c  dummypthread.h  handle_auth.c  handle_connack.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_suback.c  handle_unsuback.c  helpers.c  id  logging_mosq.c  logging_mosq.h  memory_mosq.c  memory_mosq.h  messages_mosq.c  messages_mosq.h  misc_mosq.c  misc_mosq.h  mosquitto.c  mosquitto_internal.h  net_mosq.c  net_mosq.h  net_mosq_ocsp.c  options.c  packet_datatypes.c  packet_mosq.c  packet_mosq.h  property_mosq.c  property_mosq.h  read_handle.c  read_handle.h  send_connect.c  send_mosq.c  send_mosq.h  (+14 more)
auto/lib/njetmq/njetmq/: CMakeLists.txt  keepalive.c  lib_load.h  lmdb.h  mdb.c  midl.c  midl.h  njet_bridge.c  njet_bridge_topic.c  njet_conf_base.h  njet_iot_alias_mosq.c  njet_iot_alias_mosq.h  njet_iot_client_conf.c  njet_iot_client_emb.c  njet_iot_client_props.c  njet_iot_conf.c  njet_iot_conf_includedir.c  njet_iot_context.c  njet_iot_control.c  njet_iot_database.c  njet_iot_emb.c  njet_iot_emb.h  njet_iot_handle_auth.c  njet_iot_handle_connack.c  njet_iot_handle_connect.c  njet_iot_handle_disconnect.c  njet_iot_handle_ping.c  njet_iot_handle_pubackcomp.c  njet_iot_handle_publish.c  njet_iot_handle_pubrec.c  njet_iot_handle_pubrel.c  njet_iot_handle_suback.c  njet_iot_handle_subscribe.c  njet_iot_handle_unsuback.c  njet_iot_handle_unsubscribe.c  njet_iot_internal.h  njet_iot_keepalive.c  njet_iot_lib_load.h  njet_iot_logging.c  njet_iot_loop.c  (+51 more)
auto/lib/njetmq/plugins/: CMakeLists.txt  Makefile  README.md
auto/lib/njetmq/security/: mosquitto.apparmor
auto/lib/njetmq/snap/: snapcraft.yaml
auto/lib/njetmq/src/: Makefile  bridge.c  bridge_topic.c  conf.c  conf_includedir.c  context.c  control.c  database.c  handle_connack.c  handle_connect.c  handle_disconnect.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  lib_load.h  linker-macosx.syms  linker.syms  logging.c  loop.c  memory_public.c  mosquitto_broker_internal.h  mux.c  mux.h  mux_epoll.c  persist.h  (+27 more)
auto/lib/tongsuo/: .gitignore  BUILD.gn  CHANGES  CHANGES.BabaSSL  CHANGES.en  Configure  build.info  pod2htmd.tmp  ts_20250512.diff
njetmq/njetmq/: CMakeLists.txt  njet_bridge_topic.c  njet_iot_alias_mosq.c  njet_iot_client_conf.c  njet_iot_client_emb.c  njet_iot_conf.c  njet_iot_emb.c  njet_iot_handle_pubrec.c  njet_iot_handle_suback.c  njet_iot_internal.h  njet_iot_net.c  njet_iot_persis_read_v5.c  njet_iot_retain.c  njet_iot_will_delay.c
njetmq/plugins/dynamic-security/: CMakeLists.txt  dynamic_security.h
njetmq/src/: CMakeLists.txt  handle_auth.c  keepalive.c  mosquitto.c  net.c  persist_write_v5.c  plugin.c  send_connack.c  send_suback.c
(+3704 files in other folders)
